--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,94 +1,136 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>About Us - Best Cars Dealership</title>
-  <link rel="stylesheet" href="/static/style.css">
-  <link rel="stylesheet" href="/static/bootstrap.min.css">
-  <style>
-    .about-header {
-      text-align: center;
-      padding: 40px;
-    }
-    .team-container {
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      margin-top: 40px;
-    }
-    .card {
-      margin: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    .card img {
-      height: 300px;
-      object-fit: cover;
-    }
-    .title {
-      font-weight: bold;
-      font-size: 1.2em;
-    }
-  </style>
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
-    <div class="container-fluid">
-      <h2 style="padding-right: 5%;">Best Cars Dealership</h2>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" style="font-size: larger;" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" style="font-size: larger;" href="/about">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="font-size: larger;" href="/contact">Contact Us</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <div class="container" style="max-width: 90%; margin-top: 50px;">
-    <div class="about-header">
-      <h1>About Us</h1>
-      <p>At Best Cars Dealership, we are passionate about bringing you the finest vehicles from around the globe. From trusted domestic brands to sleek international imports, our goal is to offer top-notch service and unbeatable value. With years of experience in the automotive industry, we believe in making your car-buying experience smooth, transparent, and exciting.</p>
-    </div>
-
-    <div class="team-container">
-      <div class="card" style="width: 300px;">
-        <img class="card-img-top" src="https://images.unsplash.com/photo-1607746882042-944635dfe10e" alt="John Smith">
-        <div class="card-body">
-          <p class="title">John Smith</p>
-          <p>Founder & CEO</p>
-          <p class="card-text">John brings over 20 years of automotive experience and a passion for customer satisfaction. He founded Best Cars with the mission to redefine trust in the car dealership world.</p>
-          <p>john.smith@bestcars.com</p>
+  <head>
+    <title>About Us - Best Cars Dealership</title>
+    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/static/bootstrap.min.css" />
+    <style>
+      .about-header {
+        text-align: center;
+        padding: 40px;
+      }
+      .team-container {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin-top: 40px;
+      }
+      .card {
+        margin: 20px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+      .card img {
+        height: 300px;
+        object-fit: cover;
+      }
+      .title {
+        font-weight: bold;
+        font-size: 1.2em;
+      }
+    </style>
+  </head>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: darkturquoise; height: 1in"
+    >
+      <div class="container-fluid">
+        <h2 style="padding-right: 5%">Best Cars Dealership</h2>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarText"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" style="font-size: larger" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" style="font-size: larger" href="/about"
+                >About Us</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" style="font-size: larger" href="/contact"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
+    </nav>
 
-      <div class="card" style="width: 300px;">
-        <img class="card-img-top" src="https://images.unsplash.com/photo-1544723495-432537d4b3e7" alt="Emily Johnson">
-        <div class="card-body">
-          <p class="title">Emily Johnson</p>
-          <p>Sales Director</p>
-          <p class="card-text">Emily is a sales strategist and people person. She ensures every customer leaves with a smile and the perfect ride to match their lifestyle.</p>
-          <p>emily.johnson@bestcars.com</p>
-        </div>
+    <div class="container" style="max-width: 90%; margin-top: 50px">
+      <div class="about-header">
+        <h1>About Us</h1>
+        <p>
+          At Best Cars Dealership, we are passionate about bringing you the
+          finest vehicles from around the globe. From trusted domestic brands to
+          sleek international imports, our goal is to offer top-notch service
+          and unbeatable value. With years of experience in the automotive
+          industry, we believe in making your car-buying experience smooth,
+          transparent, and exciting.
+        </p>
       </div>
 
-      <div class="card" style="width: 300px;">
-        <img class="card-img-top" src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="Michael Lee">
-        <div class="card-body">
-          <p class="title">Michael Lee</p>
-          <p>Head of Operations</p>
-          <p class="card-text">Michael ensures everything runs smoothly behind the scenes—from inventory management to service excellence across all branches.</p>
-          <p>michael.lee@bestcars.com</p>
+      <div class="team-container">
+        <div class="card" style="width: 300px">
+          <img
+            class="card-img-top"
+            src="https://images.unsplash.com/photo-1607746882042-944635dfe10e"
+            alt="John Smith"
+          />
+          <div class="card-body">
+            <p class="title">John Smith</p>
+            <p>Founder & CEO</p>
+            <p class="card-text">
+              John brings over 20 years of automotive experience and a passion
+              for customer satisfaction. He founded Best Cars with the mission
+              to redefine trust in the car dealership world.
+            </p>
+            <p>john.smith@bestcars.com</p>
+          </div>
+        </div>
+
+        <div class="card" style="width: 300px">
+          <img
+            class="card-img-top"
+            src="https://images.unsplash.com/photo-1544723495-432537d4b3e7"
+            alt="Emily Johnson"
+          />
+          <div class="card-body">
+            <p class="title">Emily Johnson</p>
+            <p>Sales Director</p>
+            <p class="card-text">
+              Emily is a sales strategist and people person. She ensures every
+              customer leaves with a smile and the perfect ride to match their
+              lifestyle.
+            </p>
+            <p>emily.johnson@bestcars.com</p>
+          </div>
+        </div>
+
+        <div class="card" style="width: 300px">
+          <img
+            class="card-img-top"
+            src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
+            alt="Michael Lee"
+          />
+          <div class="card-body">
+            <p class="title">Michael Lee</p>
+            <p>Head of Operations</p>
+            <p class="card-text">
+              Michael ensures everything runs smoothly behind the scenes—from
+              inventory management to service excellence across all branches.
+            </p>
+            <p>michael.lee@bestcars.com</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
